# Interview-Prep

./: .gitignore  CHALLENGES.md  CODING_ROUND_DESIGN.md  COLLABORATORS.md  Dockerfile  NEXT_STEPS.md  README.md  TECHNICAL_FLOW.md  docker-compose.yml  implementation_plan.md
backend/: .env.example  .gitignore  AI_INTELLIGENCE_PLAN.md  DOMAIN_REPORT.md  README.md  add_company.py  analyze_domains.py  auth_utils.py  batch_add_ai_companies.py  batch_add_companies.py  batch_add_domain_balancing.py  batch_add_domain_expansion.py  batch_add_perfect_balance.py  batch_add_round2.py  batch_add_round7.py  batch_add_round8.py  check_gpu.py  debug_out.txt  domain_report.txt  domain_summary.md  final_domain_push.py  final_merge_companies.py  final_verification.txt  fix_json_duplicates.py  generate_report.py  hit_all_twenty_milestone.py  list_other.py  main.py  moc_india_test.txt  models.py  other_list.txt  out.txt  output.txt  pyproject.toml  reach_25_all_domains.py  requirements.txt  round_config.py  run_all_batch_adds.py  schemas.py  test_company_intel.py  (+5 more)
backend/alembic/: env.py
backend/auth/: README.md  auth_utils.py
backend/core/: README.md  database.py  models.py  round_config.py  schemas.py
backend/data/: DISCOVERIES_README.md  DOMAIN_REPORT.md  README.md  company_profiles.json  company_template.json  discoveries.json  last_test_log.txt  stealth_registry.json  training_data.json
backend/scripts/: README.md  add_company.py  generate_domain_report.py
backend/services/: AI_INTELLIGENCE_PLAN.md  README.md  company_intelligence.py  gemini_service.py  memory_service.py  (+1 more)
(+51 files in other folders)
